--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,5 +1,17 @@
+@Misc{wikiBrick,
+author = {Wikipedia},
+title = {Brick},
+note = {\url{https://en.wikipedia.org/wiki/Brick_(electronics)}, Accesat inauarie 2017},
+}
+
+@Misc{wikiBootstrap,
+author = {Wikipedia},
+title = {Bootstrapping},
+note = {\url{https://en.wikipedia.org/wiki/Bootstrapping#Etymology}, Accesat ianuarie 2017},
+}
+
 @Misc{morgan2016,
-author = {Steve Morgan},
+author = {Morgan S.},
 title = {Cyber Crime Costs Projected To Reach \$2 Trillion by 2019},
 month = {Ianuarie},
 year = {2016},
@@ -10,12 +22,4 @@ note = {\url{http://www.forbes.com/sites/stevemorgan/2016/01/17/cyber-crime-cost
 author = {Interpol},
 title = {Cybercrime},
 note = {\url{https://www.interpol.int/Crime-areas/Cybercrime/Cybercrime}, Accesat ianuarie 2017},
-}
-
-@Manual{TODO,
-title = {TODO},
-}
-
-@Manual{aTODO,
-title = {aTODO},
 }
