added more details on GRUB and started writing the case study on x86

--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,35 @@
+%Sectiunea 9.1.4
+@Misc{intel64,
+author = {Intel},
+title = {Intel® 64 and IA-32 Architectures Software Developer’s Manual},
+month = {Septembrie},
+year = {2016},
+note = {\url{http://www.intel.com/content/dam/www/public/us/en/documents/manuals/64-ia-32-architectures-software-developer-manual-325462.pdf}, Accesat ianuarie 2017},
+}
+
+@Misc{biosMBRaddr,
+author = {Sakamoto Masahiko},
+title = {The mysteries arround "0x7C00" in x86 architecture bios bootloader},
+month = {Mai},
+year = {2010},
+note = {\url{http://www.glamenv-septzen.net/en/view/6}, Accesat ianuarie 2017},
+}
+
+% Sectiunea 10.2.3 
+@Manual{intel80386,
+title = {80386 Programmer's Reference Manual},
+author = {Intel},
+organization = {Intel},
+year = {1986},
+note = {\url{http://bitsavers.trailing-edge.com/pdf/intel/80386/230985-001_80386_Programmers_Reference_Manual_1986.pdf}, Accesat ianuarie 2017},
+}
+
+@Misc{wikiBootSeq,
+author = {Wikipedia},
+title = {Booting - {B}oot sequence},
+note = {\url{https://en.wikipedia.org/wiki/Booting#Boot_sequence}, Accesat ianuarie 2017},
+}
+
 @Misc{wikiBrick,
 author = {Wikipedia},
 title = {Brick},
