--- a/Barbu Paul - Gheorghe.tex
+++ b/Barbu Paul - Gheorghe.tex
@@ -11,6 +11,8 @@
 
 \usepackage[hidelinks]{hyperref}
 
+\usepackage{graphicx}
+
 \author{Barbu Paul - Gheorghe}
 
 %TODO: coperta
@@ -93,34 +95,76 @@ Cuvântul bootloader vine de la procesul de "boot" (sau "boot up"), care la rân
 \section{Modul de funcționare al unui bootloader}
 Orice bootloader trebuie stocat într-o memorie non-volatilă și de preferat disponibilă doar pentru citire, o memorie ROM\footnote{Read-Only Memory}, deoarece acesta trebuie să fie disponibil în momentul în care sistemul pornește indiferent de ce s-a întâmplat anterior pe sistem. Acest lucru garantează funcționarea corectă a sistemului și faptul că sistemul de operare sau aplicația utilizator poate fi schimbată. În caz contrar, când sistemul încetează să funcționeze din cauza unui defect (în general software) putem spune ca este "brick-uit", de la englezescul "brick" (cărămidă)\cite{wikiBrick}.
 
-Un bootloader este, fără excepție, primul program executat de către un calculator.
-Codul este încărcat din ROM în RAM\footnote{Random - Access Memory}, este executat, iar în urma execuției acestui cod (în mod tipic un sector) se pot întâmpla unul din două lucruri:
+Un bootloader este, fără excepție, primul program executat de către un procesor, bine-înțeles cu excepția BIOS-ului\footnote{Basic Input/Output System} pe x86, dar putem ignora această particularitate, deoarece pe sistemele embedded, noțiunea de BIOS nu există.
+În linii mari codul bootloader-ului este încărcat de pe discul solid\footnote{ROM la dispozitive embedded} în RAM\footnote{Random - Access Memory}, apoi este executat, iar în urma execuției acestui cod (în mod tipic un sector) se poate întâmpla unul din două lucruri:
 \begin{enumerate}
 \item bootloader-ul și-a încheiat treaba și a predat controlul aplicației utilizator respectiv sistemului de operare
 \item bootloader-ul nu încape într-un sector și codul executat anterior este doar auxiliar
 \end{enumerate}
-În al doilea caz avem de a face cu un așa zis "two stage bootloader", în primul stagiu făcându-se doar apelul spre acest stagiu secundar. Aici se va face de fapt încărcarea aplicației utilizator. Motivul din spatele încărcării în două faze este faptul că, fără drivere de disc și fără sisteme de fișiere, unitatea maximă pe care procesorul o poate citi de pe hard disc este sectorul.
+Prima variantă este cea trivială. În al doilea caz avem de a face cu un așa zis "two stage bootloader", în primul stagiu făcându-se doar apelul spre acest stagiu secundar. Aici se va face de fapt încărcarea aplicației utilizator. Motivul din spatele încărcării în două faze este faptul că, fără drivere de disc și fără sisteme de fișiere, unitatea maximă pe care procesorul o poate citi de pe hard disc este sectorul, așadar intervin limitări legate de mărimea codului care poate fi executat la un moment dat.
 
 Posibila diferență la sistemele embedded este aceea că microcontroller-ul poate executa cod direct din memoria flash și că bootloader-ul este probabil mai mic ca un sector, deoarece aplicațiile sunt reduse ca dimensiune și ca periferice cu care pot interacționa, display-ul și tastatura nefiind necesare în astfel de sisteme în timpul procesului de boot up.
 
-La calculatoarele personale un bootloader bine cunoscut și pentru care avem nevoie de display și tastatură este GNU GRUB, folosit de majoritatea distribuțiilor GNU/Linux. Acest bootloader este vizibil utilizatorului și se poate chiar schimba tipul de sistem de operare încărcat (folosind tastatura).
+La calculatoarele personale un bootloader bine cunoscut și pentru care avem nevoie de display și tastatură este GNU GRUB, folosit de majoritatea distribuțiilor GNU/Linux. Acest bootloader este vizibil utilizatorului (pe ecran, prin intermediul unui meniu asemănător cu cel din figura \ref{grub2menu}), iar în cazul sistemelor dual-boot sau multi-boot se poate chiar schimba sistemul de operare ce urmează a fi încărcat, acest lucru se face folosind tastatura.
+\begin{figure}[h]
+    \centering
+    \includegraphics{grub}
+    \caption{Meniul GRUB2}
+    \label{grub2menu}
+\end{figure}
 
-TODO: GRUB image
+\section{Studiu de caz: secvența de boot la PC}
+Deși nu este în domeniul bootloader-ului, datorită omniprezenței acestor tipuri de procesoare merită să ne familiarizăm cu secvența de pași pe care un procesor din familia x86 o execută atunci când este pornit.
+Această secvență fiind în strânsă relație cu pornirea bootloader-ului.
+
+La pornire procesorul intră în modul real și execută instrucțiunea de la adresa \texttt{0xFFFFFFF0}\footnote{pe sisteme 32 si 64 bit} \cite{intel80386} \cite{intel64}. În mod normal această locație conține o instrucțiune de salt la locația de start a BIOS-ului care se află într-o memorie ROM.
+BIOS-ul este de fapt primul program care se execută pe această arhitectură, nu direct bootloader-ul, în contradicție cu ceea ce am precizat anterior. Rolul BIOS-ului este de a inițializa hardware-ul și de a-l abstractiza, acesta rămânând tot timpul în funcțiune.
+
+Pasul de inițializare făcut de BIOS, poartă denumirea de POST\footnote{Power-On Self Test}, pas în care BIOS-ul pregătește memoria RAM și bus-urile pentru a putea începe comunicația cu perifericele a căror prezență urmează să o verifice. Aceste verificări sunt necesare, deoarece contrar unui sistem embedded, intr-un calculator personal pot apărea și dispărea componente de la o pornire la alta, de exemplu putem adăuga o placă de rețea sau putem scoate placa video, în oricare dintre aceste cazuri BIOS-ul trebuie să știe de prezența unui periferic nou sau de lipsa unuia vechi pentru a putea prezenta toate aceste informații nivelelor superioare, care vor pune în funcțiune perifericele respective.
+
+%TODO: figure with the "shell" architecture: bios, OS, libs, apps
+
+După inițializarea perifericelor, BIOS-ul trece printr-o listă pre-configurată de dispozitive de stocare non-volatile
+până când găsește unul boot-abil. Un asemenea dispozitiv este caracterizat de faptul că ultimii doi octeți ai primului sector sunt egali cu \texttt{0xAA55}\footnote{în reprezentare little-endian, în big endian, ar fi: \texttt{0x55AA}}, aceasta reprezentând "semnătura" unui disc boot-abil.
+Cel mai probabil această secvență \texttt{0xAA55} a fost aleasă deoarece în binar ea arată așa: \texttt{1010 1010 0101 0101}, observăm că biții sunt destul de variați, schimbarea în cascadă a lor neproducând din nou aceeași valoare și putând evita încărcarea unui sector invalid sau corupt.
+
+Odată ce discul boot-abil a fost găsit primul lui sector este încărcat în memorie și executat, aici se află în sfârșit bootloader-ul. Codul este încărcat la adresa \texttt{0x0000:0x7C00} \cite{biosMBRaddr}.
+
+În urma execuției bootloader-ul poate alege în mod automat de unde încarcă sistemul de operare sau, în cazul multi-boot, pasează această responsabilitate utilizatorului, punându-l să aleagă sistemul de operare dorit dintr-o listă.
+
+%TODO: despre MBR?
+
+\cite{wikiBootSeq}
+
 TODO: %https://msdn.microsoft.com/en-us/library/ms902397.aspx
+
 TODO: cum se intampla boot-ul la PC + POST % https://en.wikipedia.org/wiki/Booting\#Boot_sequence
+
 TODO:% https://en.wikipedia.org/wiki/Master_boot_record\#Programming_considerations
+
 TODO: despre alte bootloadere la PC: grub, lilo
 
+\section{Studiu de caz: secvența de boot la un sistem embedded}
+
 TODO: despre cum se scrie codul in lumea embedded, fara bootloader prima data (flashuirea din fabrica)
+
+TODO: %Standard Startup Sequenc: https://mcuoneclipse.com/2014/06/15/tutorial-diy-kinetis-sdk-project-with-eclipse-startup/
+
 TODO: despre alte bootloadere embedded
 
 \newpage
 \chapter{Rezolvarea temei de proiect}
 \section{Introducere}
 TODO: memory map, cum sta aplicatia host si guest in memorie
+
 TODO: scrie-ma
 
+TODO: %https://mcuoneclipse.com/2013/04/19/why-i-dont-like-printf/
+
+TODO: %size_comp_debug_release.ods
+
 \section{Concluzii și dezvoltări ulterioare}
+
 TODO: scrie-ma
 
 
