--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,7 +1,14 @@
+@Misc{wikiPTE,
+author = {Wikipedia},
+title = {Master {B}oot {R}ecord - {P}artition table entries},
+note = {\url{https://en.wikipedia.org/wiki/Master_boot_record#PTE}, Accesat ianuarie 2017},
+}
+
+
 %Sectiunea 9.1.4
 @Misc{intel64,
 author = {Intel},
-title = {Intel® 64 and IA-32 Architectures Software Developer’s Manual},
+title = {Intel® 64 and {IA}-32 {A}rchitectures {S}oftware {D}eveloper’s {M}anual},
 month = {Septembrie},
 year = {2016},
 note = {\url{http://www.intel.com/content/dam/www/public/us/en/documents/manuals/64-ia-32-architectures-software-developer-manual-325462.pdf}, Accesat ianuarie 2017},
