finished the x86 case study and started the embedded one

--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,43 @@
+@Manual{kv5x,
+title = {KV5x {S}ub-{F}amily {R}eference {M}anual},
+author = {NXP Semiconductors},
+month = {Iunie},
+year = {2016},
+note = {Revizia 4}
+}
+
+@Misc{wikiUboot,
+author = {Wikipedia},
+title = {Das U-Boot - Usages},
+note = {\url{https://en.wikipedia.org/wiki/Das_U-Boot#Usages}, Accesat ianuarie 2017},
+}
+
+@Misc{zdnetSecureBoot,
+author = {Steven J. Vaughan-Nichols},
+title = {Linux developers working on {W}indows {UEFI} secure boot problem},
+month = {Iulie},
+year = {2012},
+note = {\url{http://www.zdnet.com/article/linux-developers-working-on-windows-uefi-secure-boot-problem/}, Accesat ianuarie 2017},
+}
+
+%sectiunea 2.3 - arhitecturi
+%sectiunea 30 - secure boot
+@Manual{uefiSpec,
+title = {{U}nified {E}xtensible {F}irmware {I}nterface {S}pecification},
+author = {Unified {EFI} {I}nc},
+note = {Versiunea 2.6},
+month = {Ianuarie},
+year = {2016},
+}
+
+@Book{norton99,
+author = {Norton Peter},
+title = {Peter Norton's Inside the PC, Eighth Edition},
+publisher = {Sams Publishing},
+year = {1999},
+}
+
+
 @Misc{wikiPTE,
 author = {Wikipedia},
 title = {Master {B}oot {R}ecord - {P}artition table entries},
@@ -6,12 +46,12 @@ note = {\url{https://en.wikipedia.org/wiki/Master_boot_record#PTE}, Accesat ianu
 
 
 %Sectiunea 9.1.4
+%note = {\url{http://www.intel.com/content/dam/www/public/us/en/documents/manuals/64-ia-32-architectures-software-developer-manual-325462.pdf}, Accesat ianuarie 2017},
 @Misc{intel64,
 author = {Intel},
 title = {Intel® 64 and {IA}-32 {A}rchitectures {S}oftware {D}eveloper’s {M}anual},
 month = {Septembrie},
 year = {2016},
-note = {\url{http://www.intel.com/content/dam/www/public/us/en/documents/manuals/64-ia-32-architectures-software-developer-manual-325462.pdf}, Accesat ianuarie 2017},
 }
 
 @Misc{biosMBRaddr,
@@ -23,12 +63,12 @@ note = {\url{http://www.glamenv-septzen.net/en/view/6}, Accesat ianuarie 2017},
 }
 
 % Sectiunea 10.2.3 
+%note = {\url{http://bitsavers.trailing-edge.com/pdf/intel/80386/230985-001_80386_Programmers_Reference_Manual_1986.pdf}, Accesat ianuarie 2017},
 @Manual{intel80386,
 title = {80386 Programmer's Reference Manual},
 author = {Intel},
 organization = {Intel},
 year = {1986},
-note = {\url{http://bitsavers.trailing-edge.com/pdf/intel/80386/230985-001_80386_Programmers_Reference_Manual_1986.pdf}, Accesat ianuarie 2017},
 }
 
 @Misc{wikiBootSeq,
