--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,50 @@
+@Book{freertos,
+author = {Richard Barry},
+title = {Mastering the {F}ree{RTOS}\textsuperscript{TM} {R}eal {T}ime {K}ernel},
+publisher = {Real Time Engineers Ltd},
+year = {2016},
+}s
+
+@Article{kantee,
+author = {Antti Kantee and Justin Cormack},
+title = {Rump Kernels. {N}o {OS}? {N}o {P}roblem!},
+journal = {Revista USENIX ;login:},
+year = {2014},
+volume = {Vol. 39},
+number = {Numărul 5},
+month = {Octombrie},
+}
+
+
+@InProceedings{barbu,
+author = {Barbu Paul - Gheorghe},
+title = {An experiment on running surveillance software as a unikernel application},
+booktitle = {Proceedings of International Students Conference on Informatics ICDD },
+pages = {21},
+year = {2016},
+number = {ISSN 2069-964X},
+month = {Mai},
+publisher = {"Lucian Blaga" University of Sibiu},
+}
+
+
+@Book{silberschatz,
+author = {Abraham Silberschatz and Peter Baer Galvin and Greg Gagne},
+title = {Operating {S}ystem {C}oncepts},
+publisher = {JOHN WILEY \& SONS. INC},
+year = {2005},
+note = {Ediția a 7a},
+}
+
+
+@Manual{ksdk,
+title = {Kinetis {SDK} v.2.0 {API} {R}eference {M}anual},
+author = {NXP Semiconductors},
+month = {Iulie},
+year = {2016},
+note = {Revizia 0}
+}
+
 @Manual{kv5x,
 title = {KV5x {S}ub-{F}amily {R}eference {M}anual},
 author = {NXP Semiconductors},
