--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,25 @@
+@Manual{uTaskerSerial,
+title = {$\mu$Tasker – Serial Loader User’s Guide},
+author = { M.J.Butcher {C}onsulting },
+year = {2015},
+}
+
+
+@Manual{uTaskerMinim,
+title = {$\mu$Tasker "{B}are-{M}inimum" {B}oot {L}oader},
+author = { M.J.Butcher {C}onsulting },
+year = {2012},
+}
+
+@Manual{kboot,
+title = {Kinetis {B}ootloader v2.0.0 {R}eference {M}anual},
+author = {NXP Semiconductors},
+month = {Aprilie},
+year = {2016},
+note = {Revizia 0},
+}
+
+
 @Book{freertos,
 author = {Richard Barry},
 title = {Mastering the {F}ree{RTOS}\textsuperscript{TM} {R}eal {T}ime {K}ernel},
